syntax = "proto3";

package testservice;

// Simple service is used to test gRPC plumbing.
service Simple {
    rpc Something(Req) returns (Resp) {}
    rpc Flow(Req) returns (stream Resp) {}
}

message Req {
    string Datacenter = 1;
}

message Resp {
    string ServerName = 1;
    string Datacenter = 2;
}